projects/examples/source/09.03.cpp
///////////////////////////////////////////////////////////////////////////

// chapter : Memory Management

///////////////////////////////////////////////////////////////////////////

// section : Resource Handlers

///////////////////////////////////////////////////////////////////////////

// content : Evaluation Order
//
// content : Function std::make_shared

///////////////////////////////////////////////////////////////////////////

#include <memory>
#include <print>
#include <stdexcept>

///////////////////////////////////////////////////////////////////////////

void test_v1(std::shared_ptr < int > , int) 
{
	std::print("test_v1\n");
}

///////////////////////////////////////////////////////////////////////////

[[noreturn]] int test_v2() 
{
	throw std::runtime_error("error");
}

///////////////////////////////////////////////////////////////////////////

int main()
{
	try
	{
	//  test_v1(std::shared_ptr < int > (new auto(1)), test_v2()); // error
	}
	catch (...) {}

//  -----------------------------------------------------------------------

	auto x = std::make_shared < int > (1);

//  -----------------------------------------------------------------------

	try
	{
		test_v1(std::make_shared < int > (1), test_v2());
	}
	catch (...) {}
}

///////////////////////////////////////////////////////////////////////////